--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,3 +15,5 @@ steps:
   
 # Get Acces Token
 - bash: echo "##vso[task.setvariable variable=sauce]az account get-access-token --query 'accessToken'"
+
+- bash: echo my acccess token is $(sauce)
