--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,20 +6,24 @@
 trigger:
 - main
 
-
-steps:
-- bash: |
-    get_Token() {
-      curl -X POST -H 'Content-Type: application/x-www-form-urlencoded' \
-      https://login.microsoftonline.com/a48559b2-7a99-486c-813b-8e001def6ed5/oauth2/v2.0/token \
-      -d 'client_id=181aded9-0234-4302-b731-935d818fc2a4' \
-      -d 'grant_type=client_credentials' \
-      -d 'scope=https://management.azure.com/.default' \
-      -d 'client_secret=4xP8Q~_Fq6gaHqUQWZ8lWdnAdwEbk.TOlmLXpb~p' --silent \
-      | tr "," "\n" | grep access_token | tr -d '"' | tr ":" "\n" | tail -1
-    }
-    echo "##vso[task.setvariable variable=myToken;isOutput=true]$(get_Token)"
-  name: api_token
-- bash: |
+jobs:
+- job: GetToken
+  steps:
+    - bash: |
+        get_Token() {
+          curl -X POST -H 'Content-Type: application/x-www-form-urlencoded' \
+          https://login.microsoftonline.com/a48559b2-7a99-486c-813b-8e001def6ed5/oauth2/v2.0/token \
+          -d 'client_id=181aded9-0234-4302-b731-935d818fc2a4' \
+          -d 'grant_type=client_credentials' \
+          -d 'scope=https://management.azure.com/.default' \
+          -d 'client_secret=4xP8Q~_Fq6gaHqUQWZ8lWdnAdwEbk.TOlmLXpb~p' --silent \
+          | tr "," "\n" | grep access_token | tr -d '"' | tr ":" "\n" | tail -1
+        }
+        echo "##vso[task.setvariable variable=myToken;isOutput=true]$(get_Token)"
+      name: api_token
+- job: UploadBackup
     echo $myToken
   name: checker
+
+     
+
