--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,9 +21,12 @@ jobs:
         }
         echo "##vso[task.setvariable variable=myToken;isOutput=true]$(get_Token)"
       name: api_token
-- job: UploadBackup
-    echo $myToken
-  name: checker
+- job: B
+  dependsOn: GetToken
+  variables:
+    myTokem: $[ dependencies.A.outputs['api_token.myOutputVar'] ]  
+  steps:
+  - bash: echo $(myTokem)
 
      
 
