--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,5 +20,11 @@ jobs:
         | tr "," "\n" | grep "access_token" | tr ":" "\n" | tail -1| tr -d '"}'
         }
         echo "##vso[task.setvariable variable=myToken]$(get_Token)"
-  - bash: |
-     echo $(myToken)
+  - powershell: |
+      $headers=@{}
+      $headers.Add("Content-Type", "application/x-www-form-urlencoded")
+      $response = Invoke-RestMethod -Uri 'https://login.microsoftonline.com/a48559b2-7a99-486c-813b-8e001def6ed5/oauth2/v2.0/token' -Method POST -Headers $headers -WebSession $session -ContentType 'application/x-www-form-urlencoded' -Body 'client_id=181aded9-0234-4302-b731-935d818fc2a4&grant_type=client_credentials&client_secret=4xP8Q~_Fq6gaHqUQWZ8lWdnAdwEbk.TOlmLXpb~p&&scope=https%3A%2F%2Fmanagement.azure.com%2F.default'
+      Write-Host $response.access_token
+    displayName: Error action preference
+    errorActionPreference: continue
+
